# AI-Task-Manager

./: .env.example  .gitignore  PRD.md  README.md  main.py  pyproject.toml  requirements.txt
backend/: main.py
backend/core/: models.py  orchestration.py  watcher.py
backend/services/: ai_service.py  db_service.py
backend/utils/: config.py  file_ops.py  parsers.py
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/tracks/core_agent_logic_20251230/: metadata.json  plan.md  spec.md
data/: projects.json  team.json
frontend/: app.py
frontend/components/: active_view.py  history_view.py  inbox_view.py  settings_view.py
frontend/services/: api_client.py  watcher_manager.py
tests/: test_ai_service.py  test_models.py  test_parsers.py
