[project]
name = "ai-sentinel"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "extract-msg>=0.55.0",
    "logfire>=4.16.0",
    "pydantic-ai>=1.39.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "streamlit>=1.52.2",
    "watchdog>=6.0.0",
]
